# mlutils

./: .gitignore  .pre-commit-config.yaml  README.md  mlflow.sh  pyproject.toml
.github/workflows/: pr-build-test.yml
Notebooks/: Plan.ipynb  Tutorial.ipynb
config/config/: binary_classifier.py  classifier.py  regression.py
src/mlutils/automl/: eval.py  train.py
src/mlutils/cloud/: aws.py  azure.py  gcp.py
src/mlutils/utils/: config.py  io.py  kaggle.py  mlflow_utils.py
src/tests/: conftest.py
src/tests/automl/: test_eval.py  test_train.py
src/tests/cloud/: test_aws.py
src/tests/utils/: test_config.py  test_io.py  test_logger.py  test_mlflow_utils.py
